@@ -772,7 +772,6 @@ $upgrade_queries["1.4.11"][] = "UPDATE `settings` set `dbversion` = '11';";
 $upgrade_queries["1.4.11"][] = "ALTER TABLE `users` CHANGE `module_permissions` `module_permissions` VARCHAR(255)  CHARACTER SET utf8  BINARY  NULL  DEFAULT '{\"vlan\":\"1\",\"vrf\":\"1\",\"pdns\":\"1\",\"circuits\":\"1\",\"racks\":\"1\",\"nat\":\"1\",\"pstn\":\"1\",\"customers\":\"1\",\"locations\":\"1\",\"devices\":\"1\"}';";
 
 
-
 #
 # Subversion 1.4.12 queries
 #
@@ -781,14 +780,12 @@ $upgrade_queries["1.4.12"][] = "UPDATE `settings` set `dbversion` = '12';";
 $upgrade_queries["1.4.12"][] = "ALTER TABLE usersAuthMethod MODIFY COLUMN `params` varchar(2048) DEFAULT NULL;";
 
 
-
 #
 # Subversion 1.4.13 queries
 #
 $upgrade_queries["1.4.13"][] = "-- Database version bump";
 $upgrade_queries["1.4.13"][] = "UPDATE `settings` set `dbversion` = '13';";
 $upgrade_queries["1.4.13"][] = "ALTER TABLE `users` ADD `compress_actions` TINYINT(1)  NULL  DEFAULT '1';";
-
 
 
 #
@@ -803,14 +800,12 @@ $upgrade_queries["1.4.14"][] = "ALTER TABLE `api` CHANGE `app_security` `app_sec
 $upgrade_queries["1.4.14"][] = "ALTER TABLE `api` ADD `app_last_access` DATETIME  NULL";
 
 
-
 #
 # Subversion 1.4.15 queries
 #
 $upgrade_queries["1.4.15"][] = "-- Convert snmp_timeout to milliseconds";
 $upgrade_queries["1.4.15"][] = "ALTER TABLE `devices` CHANGE `snmp_timeout` `snmp_timeout` mediumint(5) unsigned DEFAULT '1000';";
 $upgrade_queries["1.4.15"][] = "UPDATE `devices` SET `snmp_timeout` = `snmp_timeout`/1000 WHERE `snmp_timeout` > 10000;";
-
 
 
 #
@@ -821,12 +816,10 @@ $upgrade_queries["1.4.16"][] = "ALTER TABLE `subnets` DROP INDEX `masterSubnetId
 $upgrade_queries["1.4.16"][] = "ALTER TABLE `subnets` ADD INDEX(`masterSubnetId`);";
 
 
-
 #
 # Subversion 1.4.17 queries
 #
 $upgrade_queries["1.4.17"][] = "-- Performance fix for linked addresses, moved to settings;";
-
 
 
 #
@@ -837,7 +830,6 @@ $upgrade_queries["1.4.18"][] = "ALTER TABLE `users` DROP INDEX `id`;";
 $upgrade_queries["1.4.18"][] = "ALTER TABLE `sections` DROP INDEX `id`;";
 
 
-
 #
 # Subversion 1.4.19 queries
 #
@@ -845,20 +837,34 @@ $upgrade_queries["1.4.19"][] = "-- Support longer php_session ids (session.hash_
 $upgrade_queries["1.4.19"][] = "ALTER TABLE `php_sessions` CHANGE `id` `id` VARCHAR(128) NOT NULL DEFAULT '';";
 
 
-
-// Japanese translation
+#
+# Subversion 1.4.20 queries
+#
+// japanese translation
 $upgrade_queries["1.4.20"][] = "-- Add Japanese translation";
 $upgrade_queries["1.4.20"][] = "INSERT INTO `lang` (`l_name`, `l_code`) VALUES ('Japanese', 'ja_JP.UTF-8');";
 
 
-
-// Instruction widget
+#
+# Subversion 1.4.21 queries
+#
+// instructions widget
 $upgrade_queries["1.4.21"][] = "-- Instruction widget";
 $upgrade_queries["1.4.21"][] = "ALTER TABLE `widgets` CHANGE `whref` `whref` ENUM('yes','no') NOT NULL DEFAULT 'no';";
 $upgrade_queries["1.4.21"][] = "ALTER TABLE `widgets` CHANGE `wsize` `wsize` ENUM('4','6','8','12') NOT NULL DEFAULT '6';";
 $upgrade_queries["1.4.21"][] = "ALTER TABLE `widgets` CHANGE `wadminonly` `wadminonly` ENUM('yes','no') NOT NULL DEFAULT 'no';";
 $upgrade_queries["1.4.21"][] = "ALTER TABLE `widgets` CHANGE `wactive` `wactive` ENUM('yes','no') NOT NULL DEFAULT 'no';";
 $upgrade_queries["1.4.21"][] = "INSERT INTO `widgets` (`wtitle`, `wdescription`, `wfile`, `wparams`, `whref`, `wsize`, `wadminonly`, `wactive`) VALUES ('User Instructions', 'Shows user instructions', 'instructions', NULL, 'yes', '6', 'no', 'yes');";
+
+
+#
+# Subversion 1.4.22 queries
+#
+// disable user
+$upgrade_queries["1.4.22"][] = "-- Add disabled user flag";
+$upgrade_queries["1.4.22"][] = "ALTER TABLE `users` ADD `disabled` SET('Yes','No')  NOT NULL  DEFAULT 'No';";
+
+
 
 // output if required
 if(!defined('VERSION') && php_sapi_name()=="cli") {
